<resources>
    <string name="app_name">聚可乐</string>
    <string name="login_text">点击开启聚可乐之旅</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">手机号/邮箱/昵称</string>
    <string name="pswd">密码</string>
    <string name="forgetpswd">忘记密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="name_hint">请输入账号</string>
    <string name="input_pswd">请输入密码</string>
    <string name="image_description">Image</string>
    <string name="input_new_pwsd">输入新密码</string>
    <string name="done">完成</string>
    <string name="loginerror">您输入的账号或者密码有错误,请重新输入</string>
    <string name="input_right">请输入正确的账号</string>
    <string name="register_phoneEmail">手机号/邮箱</string>
    <string name="security_code">获取验证码</string>
    <string name="register_phoneEmail_textInit">请输入手机号/邮箱</string>
    <string name="security_code_title">验证码</string>
    <string name="security_code_textInit">请输入收到的验证码</string>
    <string name="password">密    码</string>
    <string name="password_textInit">6–20位字母或数字</string>
    <string name="introducer">介绍人（选填）</string>
    <string name="nextStep">下一步</string>
    <string name="backLogin">已有账号，登录</string>
    <string name="selectFromGallery">从相册选择</string>
    <string name="takePicture">拍照上传</string>
    <string name="basicInfo">基本信息（注册后不能修改）</string>
    <string name="nickName">昵称： </string>
    <string name="nickNameInit">非数字开头</string>
    <string name="sex">性别： </string>
    <string name="man">男</string>
    <string name="women">女</string>
    <string name="unlimited">不限</string>
    <string name="birthday">生日： </string>
    <string name="isPrivate">请选择生日</string>
    <string name="registerStr">注册即表示您同意《聚可乐用户协议》</string>
    <string name="verify">点击验证</string>
    <string name="baseInfo">基本信息</string>
    <string name="baseInfoAttachment">（注册后不能修改）</string>
    <string name="edit">编辑</string>
    <string name="creditbalance">信用余额</string>
    <string name="howGetCredit">如何获得信用？</string>
    <string name="iAdd">我发起的邀约</string>
    <string name="iApplay">我报名的邀约</string>
    <string name="applyCount">入选</string>
    <string name="iAnswer">我回复的邀约</string>
    <string name="answerCount">\@我</string>
    <string name="iSave">我收藏的邀约</string>
    <string name="iCommit">等我评价的邀约</string>
    <string name="commitPointInit">0</string>
    <string name="settings">设置</string>
    <string name="issue">发表邀约    选择类型</string>
    <string name="nickNameEdit">这里是昵称</string>
    <string name="hobby">爱好</string>
    <string name="signin">个性签名</string>
    <string name="phone">手        机</string>
    <string name="location">所在地</string>
    <string name="profession">职业</string>
    <string name="annualSalary">年收入</string>
    <string name="height">身高</string>
    <string name="emotion">情感状态</string>
    <string name="smoke">抽烟</string>
    <string name="drink">喝酒</string>
    <string name="btn_ok">确认 </string>
    <string name="btn_cancel">取消</string>
    <string name="please_choice">请选择</string>
    <string name="signinInitText">请输入个性签名</string>
    <string name="phoneInitText">请输入手机号</string>
    <string name="nickName_pd">昵称</string>
    <string name="startDate_pd">发起中的邀约</string>
    <string name="commit">评价</string>
    <string name="add">邀请</string>
    <string name="like">喜欢</string>
    <string name="talk">聊天</string>
    <string name="likeprompt">对方也喜欢你时，才会看到你喜欢TA。</string>
    <string name="unlikeprompt">你将取消对对方的喜欢，确定么</string>
    <string name="send">发送</string>
    <string name="input">请在此输入消息</string>
    <string name="showHistory">点击查看历史记录</string>
    <string name="hideHistory">点击隐藏历史记录</string>
    <string name="album">相册</string>
    <string name="take_pic">拍摄</string>
    <string name="choiceType">邀约类型（不选表示不限类型）</string>
    <string name="initiator">对象</string>
    <string name="age">年龄</string>
    <string name="ageinit">0</string>
    <string name="time">时间</string>
    <string name="deal">用户服务条款\n
\n
&#160;&#160;&#160;&#160;本用户服务条款(以下简称“服务条款”)是由您与“聚可乐”服务提供joocola.com就“聚可乐”所提供服务订立的相关权利义务规范，本服务条款对双方均具法律效力。\n
\n
1.服务条款的确认\n
\n
&#160;&#160;&#160;&#160;“聚可乐”在此特别提醒您，在您使用“聚可乐”服务前请确实仔细阅读本协议（未成年人审阅时应得到法定监护人的陪同），如果您对本协议的任何条款或将来随时修改、补充的条款有异议，您可选择不使用“聚可乐”服务；当您点选申请键或定制、使用、接受“聚可乐”服务时即视为您已仔细阅读本条款，同意接受本服务条款的所有规范包括接受“聚可乐”对服务条款随时所做的任何修改，并愿受其拘束。 这些条款可由“聚可乐”随时更新，毋须另行通知。如果服务条款发生变更，“聚可乐”将在相关页面公布修改内容。修改后的服务一旦公布，即时生效并取代原服务条款。如果您不同意修改后的协议，可以主动取消已经获得的服务；如果您继续选择使用“聚可乐”服务则视为用户已经完全接受本协议及其修改。\n
\n
2.服务简介\n
\n
&#160;&#160;&#160;&#160;使用本服务，您需要自行配备上网和使用电信增值业务所需的设备和第三方（包含但不限于电信运营商）收取的通讯费、信息费等有关费用。“聚可乐”有权规定并修改使用本服务的一般措施，包括但不限于决定保留用户及内容信息或其他上载内容的时间、限制本服务一个帐号可上载、保存内容的数量等措施。如“聚可乐”未能储存或删除本服务的内容或其他讯息，“聚可乐”不负担任何责任。同时“聚可乐”保留随时修改或中断服务而不需通知用户的权利。“聚可乐”不需对用户或第三方负责。除非另有明确规定，增强或强化目前服务的任何新功能，包括新产品，均无条件地适用本服务条款。
\n
\n3.用户使用规则\n
\n
&#160;&#160;&#160;&#160;3.1 用户个人资料真实性
\n
&#160;&#160;&#160;&#160;用户保证自己在使用本服务时用户身份的真实性和正确性及完整性，如果资料发生变化，用户应及时更改，“聚可乐”不能也不会对您的资料不真实、不准确，或您的资料未能及时更新，或因您丢失了帐号和密码而引起的任何损失或损害承担责任。若用户提供任何错误、不实、过时或不完整的资料，并为“聚可乐”所确知；或者“聚可乐”有合理理由认为前述资料为错误、不实、过时或不完整，“聚可乐”有权暂停或终止用户的帐号，并拒绝现在或将来使用本服务的全部或一部分。\n
\n
\n&#160;&#160;&#160;&#160;3.2 用户帐号、密码
\n
&#160;&#160;&#160;&#160;用户应保持密码及帐号的机密安全。您应对任何人利用您的密码及帐号所进行的活动负完全的责任，“聚可乐”无法对非法或未经您授权使用您帐号及密码的行为作出甄别，因此“聚可乐”不承担任何责任。禁止用户转让或继受、售卖其帐号、密码。如果“聚可乐”发现使用者并非帐号初始注册人，“聚可乐”有权回收该帐号而无需向该帐户使用人承担法律责任。\n
\n
\n&#160;&#160;&#160;&#160;3.3 服务用途
\n
&#160;&#160;&#160;&#160;除非与“聚可乐”另签协议，用户同意本服务仅供个人非商业性质的使用。用户承诺不经“聚可乐”书面同意，不得利用本服务进行广告、销售、商业展示等商业性用途。
\n
\n&#160;&#160;&#160;&#160;3.4 “聚可乐”服务使用规则
\n
\n&#160;&#160;&#160;&#160;3.4.1 用户不得利用本服务或在“聚可乐”网页上、复制、上传、存储、传播任何危害国家安全、损害国家荣誉和利益、煽动民族仇恨、民族歧视、宣扬邪教和封建迷信、任何妨碍社会治安或反动、暴力、凶杀、虚假、恐怖、骚扰、侮辱、诽谤、恐吓、淫秽色情或教唆犯罪等法律法规禁止的内容。
\n
\n&#160;&#160;&#160;&#160;3.4.2 用户必须保证，您在“聚可乐”站点的行为并未侵犯任何第三方之合法权益。否则，将由您承担由此带来的一切法律责任；用户不得将任何内部资料、机密资料、涉 及他人隐私资料或侵犯任何人的专利、商标、著作权、商业秘密或其他专属权利之内容加以上载、公开、或以其他方式传送。
\n
\n&#160;&#160;&#160;&#160;3.4.3 用户不得利用本服务进行故意制作、传播计算机病毒等破坏性程序，不得针对本服务与本服务连接的服务器或网络制造干扰、混乱、或违反连接本服务的网络的任何要求、程序、政策或规则，否则“聚可乐”将保留追究其法律责任的权利并有权将其提交给相关部门处理。
\n
\n&#160;&#160;&#160;&#160;3.4.4 “聚可乐”有权对用户的网页、添加的文字等内容进行审核，有任何违反法律法规或本协议之有关规定的网页、文字，“聚可乐”有权立即将其删除或屏蔽，且不需要对用户另行通知。
\n
\n&#160;&#160;&#160;&#160;3.4.5 “聚可乐”有权在收到第三方投诉后对用户内容中涉嫌侵权或违法的网页或链接予以删除或屏蔽，且不需要另行通知。
\n
\n&#160;&#160;&#160;&#160;3.4.6 用户同意遵守《中华人民共和国民法通则》、《中华人民共和国著作权法》、《中华人民共和国保守国家秘密法》、《中华人民共和国计算机信息系统安全保护条 例》、《计算机软件保护条例》、《最高人民法院关于审理涉及计算机网络著作权纠纷案件适用法律若干问题的解释(法释[2004]1号)》、《信息网络传播 权保护条例》、《互联网著作权行政保护办法》等有关国家法律和法规.实施办法。在任何情况下，如用户违反国家法律法规或本服务条款，“聚可乐”可以在任何时候，不经事先通知终止向该用户提供服务。如导致“聚可乐”遭受任何损害或遭受任何来自第三方的纠纷、诉讼、索赔要求等，用户须向“聚可乐”赔偿相应的损失，用户应当对其违反法律法规或本协议服务条款所产生的一切后果负全部法律责任。
\n
\n&#160;&#160;&#160;&#160;3.5 接受系统邮件、消息
\n
\n&#160;&#160;&#160;&#160;如果用户使用“聚可乐”服务，即表示用户愿意接受“聚可乐”服务发出的相关邮件或“聚可乐”系统消息（包括但不限于商品促销等广告信息）。因此而有可能造成的用户骚扰，“聚可乐”不负担任何责任。
\n
\n&#160;&#160;&#160;&#160;3.6 公开内容的许可
\n&#160;&#160;&#160;&#160;用户同意“聚可乐”搜索您公开的网页内容，并将搜索结果展示给其他用户，其他用户也有权查看您公开的网页内容。
\n
\n&#160;&#160;&#160;&#160;3.7 关于链接
\n&#160;&#160;&#160;&#160;本服务会提供与其他国际互联网网站或资源的链接。对于前述网站或资源是否可以利用，“聚可乐”不予担保。因使用或依赖上述网站或资源所生的损失或损害，“聚可乐”不负担任何责任。 
\n\n
4.服务风险及免费声明\n
\n
\n&#160;&#160;&#160;&#160;4.1 用户完全理解并同意，本服务涉及到互联网及移动通讯等服务，可能会受到各个环节不稳定因素的影响。因此服务存在因上述不可抗力、计算机病毒或黑客攻击、系统不稳定、用户所在位置、用户关机、GSM网络、互联网络、通信线路原因等造成的服务中断或不能满足用户要求的风险。使用本服务的用户须承担以上风险，“聚可乐”对服务之及时性、安全性、准确性不作担保，对因此导致用户不能发送和接受阅读消息或传递错误，个人设定之时效、未予储存或其他问题不承担任何责任。对于不可抗力或非“聚可乐”过错原因导致的用户数据损失、丢失或服务停止，“聚可乐”将不承担任何责任。“聚可乐”对任何直接、间接、偶然、特殊及继起的损害不负责任。
\n
\n&#160;&#160;&#160;&#160;4.2 对于系统发生故障影响到本服务的正常运行，“聚可乐”承诺及时处理进行修复。但用户因此而产生的经济和精神损失，“聚可乐”不承担责任。此外，“聚可乐”保留不经事先通知为维护、升级或其他目的暂停本服务任何部分的权利。
\n
\n&#160;&#160;&#160;&#160;4.3 “聚可乐”郑重提请您注意，任何经由本服务上载、张贴、发送的网页、文字、照片、图形、视讯、信息、用户的登记资料或其他资料（以下简称“内容”）， 无论系公开还是私下传送，均由内容提供者承担责任。“聚可乐”无法控制经由本服务传送之内容，也无法对用户的使用行为进行全面控制，因此不保证内容的合法性、正确性、完整性、真实性或品质；您已预知使用本服务时，可能会接触到令人不快、不适当或令人厌恶之内容，并同意将自行加以判断并承担所有风险，而不依赖于“聚可乐”。但在任何情况下，“聚可乐”有权依法停止传输任何前述内容并采取相应行动，包括但不限于暂停用户使用本服务的全部或部分，保存有关记录， 并向有关机关报告。但“聚可乐”有权(但无义务)依其自行之考量，拒绝和删除可经由本服务提供之违反本条款的或其他引起“聚可乐”或其他用户反感的任何内容。
\n
\n&#160;&#160;&#160;&#160;4.4 用户完全理解并同意，若第三方在您不知情或未经您同意的前提下，将您的网页链接地址至“聚可乐”，“聚可乐”均不对任何人承担任何责任。
\n
\n&#160;&#160;&#160;&#160;4.5 用户完全理解并同意，通过本服务收到广告信息，进而与广告商进行任何形式的商业往来，或参与促销活动，包含相关商品或服务之付款及交付，以及达成的其他任何相关条款、条件、保证或声明，完全为您与广告商之间之行为。除有关法律有明文规定要求“聚可乐”承担责任以外，您因前述任何交易或前述广告商而遭受的任何性质的损失或损害，“聚可乐”均不予负责。
\n
\n&#160;&#160;&#160;&#160;4.6 如发生下列任何一种情形，“聚可乐”有权随时中断或终止向用户提供服务而无需通知该用户：
\n
\n&#160;&#160;&#160;&#160;4.6.1 用户提供的个人资料不真实；
\n
\n&#160;&#160;&#160;&#160;4.6.2 用户违反本服务条款的规定；
\n
\n&#160;&#160;&#160;&#160;4.6.3 按照主管部门的要求；
\n
\n&#160;&#160;&#160;&#160;4.6.4 用户注册后长期闲置不用的帐号；
\n
\n&#160;&#160;&#160;&#160;4.6.5 “聚可乐”发现用户反动、淫秽及其他违反国家法律规定的网页内容；
\n
\n&#160;&#160;&#160;&#160;4.6.6 其他“聚可乐”认为是符合整体服务需求的特殊情形。
\n
\n5.用户隐私保护\n
\n
&#160;&#160;&#160;&#160;保护用户个人隐私是“聚可乐”的一项基本政策。所以，除非遵守国家法律规定在有关国家机关查询时、遵守“聚可乐”产品的特定程序、为维护“聚可乐”的合法权益、被侵害的第三人提出权利主张或在紧急情况下竭力维护用户个人和社会大众的隐私安全的，“聚可乐”不会公开、编辑或透露用户的注册资料及保存在本服务中的非公开内容。 此外，在以下（包括但不限于）几种情况下，用户同意“聚可乐”使用用户的个信息：\n
\n&#160;&#160;&#160;&#160;a. 在进行促销或抽奖时，“聚可乐”可能会与赞助商共享用户的个人信息，在这些情况下“聚可乐”会在发送用户信息之前进行提示，并且用户可以通过不参与来终止传送过程。\n
\n&#160;&#160;&#160;&#160;b. “聚可乐”可以将用户信息与第三方数据匹配。\n
\n&#160;&#160;&#160;&#160;c. “聚可乐”会通过透露用户统计数据，向未来的合作伙伴、广告商及其他第三方以及为了其他合法目的而描述“聚可乐”的服务。\n
\n&#160;&#160;&#160;&#160;“聚可乐”会竭尽全力保护用户的信息，但“聚可乐”不能确信或保证任何个人信息的安全性，用户须自己承担风险。比如用户联机公布可被公众访问的个人信息时，用户有可能会收到未经用户同意的消息；“聚可乐”的合作伙伴和可通过“聚可乐”访问的第三方因特网站点和服务或通过抽奖、促销等活动得知用户个人信息的其他第三方会进行独立的数据收集工作等活动，“聚可乐”对用户及其他任何第三方的上述行为，不负担任何责任。\n
\n
\n6.内容标识的所有权\n
\n
&#160;&#160;&#160;&#160;内容包括“聚可乐”网站的文字、软件、声音、图片等及在邮件信息、广告中的全部内容。标识包括““聚可乐””及相关图形标识，所有这些内容、标识均受版权、商标和专利等其它财产所有权法律的保护。所以，用户只能在“聚可乐”授权下才能使用这些内容，而不能擅自复制、再造这些内容或创造与内容有关的派生产品。\n
\n
\n7.适用法律及争议管辖\n
\n
&#160;&#160;&#160;&#160;本服务条款之效力和解释均适用中华人民共和国之法律。如服务条款之任何一部分与中华人民共和国法律相抵触，则该部分条款应按法律规定重新解释，部分条款之无效或重新解释不影响其它条款之法律效力。用户和“聚可乐”一致同意凡因本服务所产生的纠纷双方应协商解决，协商不成任何一方可提交“聚可乐”公司所在地法院诉讼裁决。\n
\n
8.“聚可乐”拥有对本协议服务条款的解释权\n
\n
&#160;&#160;&#160;&#160;用户对服务之任何部分或本服务条款的任何部分之意见及建议可通过客服与“聚可乐”联系。\n
        
    </string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_personal_center">PersonalCenterActivity</string>
    <string name="title_activity_personal_info_edit">PersonalInfoEditActivity</string>
    <string name="issue_time">时间</string>
    <string name="issue_theme">主题</string>
    <string name="issue_duixiang">邀约对象</string>
    <string name="issue_cost">花销</string>
    <string name="issue_place">地点</string>
    <string name="issue_state">说明</string>
    <string name="issue_cost_credit">愿花费信用(不低于10)</string>
    <string name="issue_credit_balance">信用余额 :</string>
    <string name="issue_credit_pay">信用充值</string>
    <string name="issue_sureissue">确认发布</string>
    <string name="issue_hint">提示</string>
    <string name="issue_hinta">1.花费信用越高，越能体现邀约诚意，排名越靠前，越容易找到感兴趣的人。</string>
    <string name="issue_hintb">2.邀约不成功，扣除10个信用后，剩下的全部返还。</string>
    <string name="issue_hintc">3.发布成功后，不能修改类型、主题、邀约详情等信息。</string>
    <string name="issue_hintd">4.虚假发布将被删除并没收信用.</string>
    <string name="issue_choosetime">选择时间</string>
    <string name="issue_choosedata">选择日期</string>
    <string name="title_activity_watch_big_pic">WatchBigPicActivity</string>
    <string name="issue_ok">恭喜,发布邀约成功!</string>
    <string name="issue_oktishi">请在约定时间到达之前,从报名者中选定与你一起聚会/约会的人.</string>
    <string name="check_details">查看详情</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>
    <string name="title_activity_personal_detail">PersonalDetailActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_member_list">MemberListActivity</string>
    <string name="feedback">意见反馈</string>
    <string name="exit">退出</string>
    <string name="logout_exit">注销登录</string>
    <string name="alter_pswd">修改密码</string>
    <string name="alter_mail">修改邮箱</string>
    <string name="alter_phonenum">修改手机号</string>
    <string name="update">版本更新</string>
</resources>