<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/phonemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="40dp"
        android:text="@string/register_phoneEmail" />

    <Button
        android:id="@+id/get_security_code"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/phonemail"
        android:layout_alignBottom="@+id/phonemail"
        android:layout_alignParentRight="true"
        android:layout_marginRight="19dp"
        android:text="@string/security_code" />

    <EditText
        android:id="@+id/edit_pm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/phonemail"
        android:layout_below="@+id/get_security_code"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:hint="@string/register_phoneEmail_textInit"
        android:ems="30" >
         <requestFocus />
     </EditText>

    <TextView
        android:id="@+id/security_code_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_pm"
        android:layout_below="@+id/edit_pm"
        android:layout_marginTop="26dp"
        android:text="@string/security_code_title" />

    <EditText
        android:id="@+id/edit_security"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/security_code_title"
        android:layout_below="@+id/security_code_title"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/security_code_textInit" />

    <TextView
        android:id="@+id/input_new_pwsd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_security"
        android:layout_below="@+id/edit_security"
        android:layout_marginTop="26dp"
        android:layout_centerVertical="true"
        android:text="@string/input_new_pwsd" />

    <EditText
        android:id="@+id/edit_new_pwsd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/input_new_pwsd"
        android:layout_below="@+id/input_new_pwsd"
        android:layout_marginTop="14dp"
        android:layout_marginRight="20dp"
        android:hint="@string/password_textInit"
        android:ems="20" > 
    </EditText>

    <Button
        android:id="@+id/find_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_new_pwsd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:text="@string/done" />

</RelativeLayout>
