<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    >
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="30dp"
	    style="@style/size_middle"
	    android:text="@string/register_phoneEmail"
	    android:textColor="@color/black"
	    android:layout_marginTop="8dp"
	    android:layout_marginLeft="8dp"
	    android:id="@+id/title_userName"
	    android:gravity="center"
	    />
	<Button
	    android:layout_height="30dp"
	    android:layout_width="80dp"
	    style="@style/size_middle"
	    android:text="@string/security_code"
	    android:layout_toRightOf="@id/title_userName"
	    android:layout_alignTop="@id/title_userName"
	    android:layout_alignParentRight="true"
	    android:layout_marginRight="10dp"
	    android:layout_marginLeft="100dp"
	    android:id="@+id/getAutoCode"
	    android:background="@drawable/btnclick"
	    />
	<EditText
	    android:layout_width="match_parent"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:paddingLeft="5dp"
	    android:paddingRight="5dp"
	    android:layout_height="40dp"
	    android:gravity="center_vertical|left"
	    android:hint="@string/register_phoneEmail_textInit"
	    android:id="@+id/usernameText"
	    android:inputType="textPhonetic|textPhonetic"
	    android:layout_below="@id/title_userName"
	    android:layout_marginTop="5dp"
	    android:background="@drawable/edittextbg"
	    />
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="30dp"
	    style="@style/size_middle"
	    android:text="@string/security_code_title"
	    android:textColor="@color/black"
	    android:layout_marginLeft="10dp"
	    android:id="@+id/title_authcode"
	    android:gravity="center"
	    android:layout_below="@id/usernameText"
	    android:layout_marginTop="5dp"
	    />
	<EditText
	    android:layout_width="match_parent"
	    android:paddingLeft="5dp"
	    android:paddingRight="5dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:background="@drawable/edittextbg"
	    android:layout_height="40dp"
	    android:gravity="center_vertical|left"
	    android:hint="@string/security_code_textInit"
	    android:id="@+id/authcode_text"
	    android:inputType="textPhonetic|textPhonetic"
	    android:layout_below="@id/title_authcode"
	    android:layout_marginTop="5dp"
	    />
	
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="40dp"
	    style="@style/size_middle"
	    android:text="@string/password"
	    android:textColor="@color/black"
	    android:layout_marginLeft="10dp"
	    android:id="@+id/title_password"
	    android:gravity="center"
	    android:layout_below="@id/authcode_text"
	    android:layout_marginTop="5dp"
	    />
	<EditText
	    android:layout_width="match_parent"
	    android:paddingLeft="5dp"
	    android:paddingRight="5dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:background="@drawable/edittextbg"
	    android:layout_height="40dp"
	    android:gravity="center_vertical|left"
	    android:hint="@string/password_textInit"
	    android:id="@+id/password_text"
	    android:inputType="textPassword"
	    android:layout_below="@id/title_password"
	    android:layout_marginTop="5dp"
	    />
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="40dp"
	    style="@style/size_middle"
	    android:text="@string/introducer"
	    android:textColor="@color/black"
	    android:layout_marginLeft="10dp"
	    android:id="@+id/introducer"
	    android:gravity="center"
	    android:layout_below="@id/password_text"
	    android:layout_marginTop="5dp"
	    />
	<EditText
	    android:layout_width="match_parent"
	    android:paddingLeft="5dp"
	    android:paddingRight="5dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:background="@drawable/edittextbg"
	    android:layout_height="40dp"
	    android:gravity="center_vertical|left"
	    android:hint="@string/name"
	    android:id="@+id/introducerText"
	    android:layout_below="@id/introducer"
	    android:layout_marginTop="5dp"
	    />
	<Button
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:id="@+id/nextStep"
	    android:textSize="16sp"
	    android:layout_below="@id/introducerText"
	    android:text="@string/nextStep"
	    android:layout_marginTop="20dp"
	    android:background="@drawable/nextbtnclick"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:textColor="@color/white"
	    />
	<TextView 
	   	android:layout_width="wrap_content"
	   	android:layout_height="40dp"
	   	android:textSize="14sp"
	   	android:textColor="@drawable/clicktextcolor"
	   	android:id="@+id/backLogin"
	   	android:text="@string/backLogin"
	   	android:layout_below="@id/nextStep"
	   	android:layout_marginRight="10dp"
	   	android:layout_alignParentRight="true"
	   	android:gravity="center"/>
</RelativeLayout>
</ScrollView>
