<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_cost_credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/issue_cost_credit" />

    <EditText
        android:id="@+id/et_cost_credit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/edittext_bg"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal" >
        <TextView
        android:id="@+id/tv_credit_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" 
        android:layout_marginBottom="10dp"
        android:text="@string/issue_credit_balance" />

        <TextView
            android:id="@+id/credit_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:layout_marginTop="10dp" 
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
             />

    </LinearLayout>

    <Button
        android:id="@+id/btn_sureissue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@drawable/nextbtnclick"
        android:text="@string/issue_sureissue" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/issue_hint"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
         />

    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:text="@string/issue_hinta" />
     <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:text="@string/issue_hintb" />
      <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:text="@string/issue_hintc" />
       <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:text="@string/issue_hintd" />

</LinearLayout>
