<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/photoImg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/myphoto" />

        <Button
            android:id="@+id/selectFromGallery"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:background="@drawable/btnclick"
            android:gravity="center"
            android:text="@string/selectFromGallery"
            android:textSize="14sp" />

        <Button
            android:id="@+id/takePicture"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/btnclick"
            android:gravity="center"
            android:text="@string/takePicture"
            android:textSize="14sp" />
    </LinearLayout>
	<View
	    android:layout_width="match_parent"
	    android:layout_height="1px"
	    android:background="@color/gray2"
	    android:layout_marginTop="8dp"
	    android:layout_marginBottom="8dp"
	    />
	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/baseInfo"
	    android:textSize="16sp"
	    android:layout_marginLeft="10dp"
	    />
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/baseInfoAttachment"
	    android:textSize="14sp"
	    />
	</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/nickName"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/NickName_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:hint="@string/nickNameInit"
            android:background="@drawable/edittextbg"
            android:textSize="16sp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/sex"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/Group"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <!-- <RadioButton -->
            <!-- android:id="@+id/man" -->
            <!-- android:layout_width="wrap_content" -->
            <!-- android:layout_height="wrap_content" -->
            <!-- android:text="@string/man" /> -->


            <!-- <RadioButton -->
            <!-- android:id="@+id/women" -->
            <!-- android:layout_width="wrap_content" -->
            <!-- android:layout_height="wrap_content" -->
            <!-- android:layout_marginLeft="20dp" -->
            <!-- android:text="@string/women" /> -->
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/birthday"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/birthdayText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:hint="@string/isPrivate"
            android:textSize="16sp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:background="@drawable/nextbtnclick" />

    <TextView
        android:id="@+id/agreeDeal"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/registerStr"
        android:textSize="14sp" />
</LinearLayout>
</ScrollView>