<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="130dp" >

        <ImageView
            android:id="@+id/issue_okimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="38dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/issue_ok" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/issue_okimg"
            android:text="@string/issue_ok"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/black" />
    </RelativeLayout>

    <TextView
        android:id="@+id/issue_ok_tishi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/issue_oktishi"
        android:layout_marginLeft="30dp"
        android:textStyle="bold"
        android:layout_marginRight="30dp"/>

    <Button
        android:id="@+id/check_details_btn"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="wrap_content"
        android:background="@drawable/nextbtnclick"
        android:text="@string/check_details" />

</LinearLayout>
